# textbox

./: Application.cpp  Application.h  CMakeLists.txt  README.md  main.cpp
Font/: EnumFonts.h  FontManager.cpp  FontManager.h
GUIComponents/: GUIComponent.cpp  GUIComponent.h
GUIComponents/EventHandler/: EventHandler.h
GUIComponents/snapshot/: Snapshot.cpp  Snapshot.h  SnapshotInterface.h
History/: History.cpp  History.h  HistoryNode.h
KeyboardShortcuts/: KeyboardShortcuts.cpp  KeyboardShortcuts.h
MouseEvents/: MouseEvents.cpp  MouseEvents.h
States/: EnumStates.h  States.cpp  States.h
TextBox/: Cursor.cpp  Cursor.h  Label.cpp  Label.h  LetterObject.cpp  LetterObject.h  TextBox.cpp  TextBox.h  _LOCAL_CONSTANTS.h
